# portfolio-backtest

./: .gitignore  LICENSE  Makefile  README.md  portfolio-backtester-BUILD-SPEC.md  pyproject.toml  review_pass.py  streamlit_app.py  test_runner.py
.github/workflows/: ci.yml
notebooks/: backtest_demo.ipynb
scripts/: generate_fixtures.py
src/portfolio_bt/: __init__.py  api.py  errors.py  models.py
src/portfolio_bt/data/: __init__.py  cache.py  fetcher.py  providers.py
src/portfolio_bt/engine/: __init__.py  allocations.py  backtester.py  rebalance.py
src/portfolio_bt/metrics/: __init__.py  calculator.py
src/portfolio_bt/viz/: __init__.py  charts.py
tests/: conftest.py  helpers.py
tests/fixtures/api/: tiingo_bnd.json  tiingo_efa.json  tiingo_gld.json  tiingo_iwm.json  tiingo_qqq.json  tiingo_spy.json  tiingo_tlt.json  tiingo_vnq.json  tiingo_vti.json  tiingo_vwo.json  tiingo_vxus.json
tests/fixtures/expected/: known_answers.json  sample_output.json
tests/fixtures/prices/: bond_2010_2020.parquet  compare_2011_2020.parquet  spy_2010_2020.parquet  three_fund_2011_2020.parquet
tests/integration/: test_cache_refresh_flow.py  test_multi_portfolio_flow.py  test_single_portfolio_flow.py
tests/unit/: test_allocations.py  test_backtester.py  test_charts.py  test_fetcher.py  test_metrics.py  test_rebalance.py
tests/ux/: test_output_contract.py  test_streamlit_smoke.py
tests/validation/: test_known_answers.py  test_sanity_bounds.py
